# explain

./: .gitlab-ci.yml  Cargo.toml  Makefile
.github/workflows/: audit.yml  ci.yml
docs/: LICENSE  README.md
examples/: plan_1.dot  plan_2.dot  plan_3.dot  plan_4.dot  plan_5.dot  plan_large.dot  plan_large.json  plan_parallel.dot  plan_trigger.dot
src/: draw.rs  errors.rs  explain.rs  graph.rs  main.rs  pgpass.rs
