[package]
name = "explain"
version = "1.2.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2018"
homepage = "https://github.com/sanpii/explain"
repository = "https://github.com/sanpii/explain.git"

[dependencies]
dot = "0.1"
human-panic = "1.0"
rpassword = "4.0"
serde_json = "1.0"
structopt = "0.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.elephantry]
version = "0.3"
features = ["json"]
