[package]
name = "explain"
version = "1.4.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"
homepage = "https://github.com/sanpii/explain"
repository = "https://github.com/sanpii/explain.git"

[dependencies]
dot2 = "0.1"
human-panic = "1.0"
rpassword = "6.0"
serde_json = "1.0"
thiserror = "1.0"

[dependencies.clap]
version = "3.0"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.elephantry]
version = "3.0"
features = ["json"]
