[package]
name = "explain"
version = "1.5.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2024"
homepage = "https://github.com/sanpii/explain"
repository = "https://github.com/sanpii/explain.git"

[dependencies]
dot2 = "1.0"
human-panic = "2.0"
rpassword = "7.0"
serde_json = "1.0"
thiserror = "2.0"

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.elephantry]
version = "5.0"
features = ["json"]
